<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.NameFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/title_user_enter_text" />

            <EditText
                android:id="@+id/insertTextView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/teal_700" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/title_changed_text" />

            <TextView
                android:id="@+id/changedTextView"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/teal_700" />

            <Button
                android:id="@+id/replace_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/replace_button" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/teal_700" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/database_text" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/namesListRecyclerView"
                android:name="bg.replacername.replacername.fragments.MainFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:layoutManager="LinearLayoutManager"
                tools:context=".fragments.NameFragment"
                tools:listitem="@layout/list_item_names" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/teal_700" />

            <Button
                android:id="@+id/button_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/next" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>